version 1.1-2
- Discussion paper included in 'doc' directory of package

version 1.1-1
- Updates on vignette, index.html of online manual and documentation.
- Solved possible clash with plyr: both editrules and plyr publish a reduce function.

version 1.1-0
- Deductive imputation methods for categorical data: deduImpute, deductiveLevels
- Deductive imputation methods for numerical records: deduImpute, solSpace/imputess, deductiveZeros
- Solved corner case: constructing deducorrect object when nothing was corrected failed.

version 1.0-2
- correctSigns has more thorough argument checking. Variables in flip or swap, not occuring in rules are removed.
- Test for unimodularity of editmatrix in correctRounding can optionally be turned off.
- fixed a bug in correctRounding causing inequality violations in certain cases (Thanks to Kenneth Chin-A-Fat)
- passing argument Q to correctRoundings now emits error

version 1.0-1
- fixed bug in correctSigns causing inequality violations in certain cases.

version 1.0-0
- discussion paper published and added to package documentation

version 0.9-6
- Shrunk included papers with tools::compactPDF()
- Small changes to fix warnings and errors after update of editrules and R2.13-patched
- Vignette finished

version 0.9-5
- vignette nearly finished
- Package now depends on editrules version >= 0.6
- Changed getUsername so it uses Sys.info

version 0.9-4
- Fixed a bug in correctTypos: all solutions were flagged as partial.
- Fixed a bug in damerauLevenschtein distance

version 0.9-3
- vignette virtually complete
- made detection of username more robust
- correctRounding does not allow generation of new inequality violations, compatible with correctTypos.
- correctTypos now checks solution suggestions for generating new inequality violations.
- set variable Q in correctRounding to deprecated
- fixed bug in isTotallyUnimodular
- old.correctSigns now removed
- added index.html for vignettes

version 0.9-2
- some work on vignette