@@ -41,7 +41,10 @@
 #' @seealso \code{\link{deducorrect-object}}
 newdeducorrect <- function(corrected, corrections, status){ 
     corrsummary <- array(0,dim=c(1,ncol(corrected)+1),dimnames=list(NULL,c(colnames(corrected),'sum'))) 
-    if (nrow(corrections) > 0) corrsummary <- addmargins(table(corrections$variable, useNA="no"))
+    if (nrow(corrections) > 0){
+        corrsummary <- addmargins(table(corrections$variable, useNA="no"))
+        rownames(corrections) <- NULL
+    }
     structure(
         list(
             corrected   = corrected, 
